# monorepo-with-tauri-client

./: .gitignore  LICENSE  README.md
.github/workflows/: desktop-publish.yml  test-on-push.yml
tauri-app/: package.json
tauri-app/src/: App.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri-sidecar/: README.md  package.json
tauri-sidecar/src-tauri/: Cargo.toml  tauri.conf.json
